# RCON-CrossBots

./: LICENSE  README.md  loader.py  pyproject.toml
bots/: __init__.py
bots/ds/: bot.py  pyproject.toml
bots/tg/: bot.py  pyproject.toml
bots/tg/routers/: __init__.py  default.py  filters.py
bots/vk/: bot.py  pyproject.toml
bots/vk/handlers/: __init__.py  default.py  rules.py
configs/: ds_config.yml  main_config.yml  tg_config.yml  vk_config.yml
dont_touch_me/: env_example.md  how_to_install.md
managers/: __init__.py  config_manager.py  log_manager.py
rcon/: executor.py
