[tool.poetry]
name = "rcon-crossbots"
version = "0.7-beta"
description = "RCON чат-бот для нескольких платформ сразу."
authors = ["Taskovich"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
loguru = "0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"